# liara-renderer

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE  README.md  book.toml  manifest.json  release-please-config.json  vcpkg-configuration.json  vcpkg.json
.github/workflows/: commitlint.yml  docs-preview.yml  docs.yml  preview-cleanup.yml  release-please.yml
docs/: book.liaradoc.json
include/liara/renderer/: config.h.in
src/: renderer.cpp
tests/: CMakeLists.txt  test_renderer_cxx.cpp
